jenkins-pipeline-for-deployment/eks-cluster/3-nodes.tf
resource "aws_iam_role" "nodes-iam" {
  name = "NodesRole"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

resource "aws_iam_role_policy_attachment" "deployment-AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.nodes-iam.name
}

resource "aws_iam_role_policy_attachment" "deployment-AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.nodes-iam.name
}

resource "aws_iam_role_policy_attachment" "deployment-AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.nodes-iam.name
}

resource "aws_eks_node_group" "deployment-nodes" {
  cluster_name    = aws_eks_cluster.deployment-eks.name
  node_group_name = "Altkube-eks-nodes"
  node_role_arn   = aws_iam_role.nodes-iam.arn

  subnet_ids = [
    aws_subnet.private-us-east-1a.id,
    aws_subnet.private-us-east-1b.id
  ]

  capacity_type  = "ON_DEMAND"
  instance_types = ["t3.medium"]

  scaling_config {
    desired_size = 2
    max_size     = 4
    min_size     = 1
  }

  update_config {
    max_unavailable = 1
  }

  labels = {
    role = "general"
  }

  
  depends_on = [
    aws_iam_role_policy_attachment.deployment-AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.deployment-AmazonEKS_CNI_Policy,
    aws_iam_role_policy_attachment.deployment-AmazonEC2ContainerRegistryReadOnly,
  ]
}



# taint {
#   key    = "team"
#   value  = "devops"
#   effect = "NO_SCHEDULE"
# }

# launch_template {
#   name    = aws_launch_template.eks-with-disks.name
#   version = aws_launch_template.eks-with-disks.latest_version
# }
# resource "aws_launch_template" "eks-with-disks" {
#   name = "eks-with-disks"

#   key_name = "local-provisioner"

#   block_device_mappings {
#     device_name = "/dev/xvdb"

#     ebs {
#       volume_size = 50
#       volume_type = "gp2"
#     }
#   }
# }
